# sortv2

./: .gitignore  .python-version  API_Documentation.md  Database_Schema_Documentation.md  Frontend_Endpoints.md  README.md  game_only_schema.sql  sorting_quiz_schema.sql  sorting_quiz_tables.md  tables_attributes.md
backend/: .env.render  .python-version  .render.yaml  SECURITY_README.md  app.py  app_secure.py  auth.py  config.py  database.py  middleware.py  pyproject.toml  requirements.txt  run_secure.py  security.py  start.py
frontend/: .env.example  fix_order.js  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/game/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/select/: page.tsx
frontend/app/verify-email/: page.tsx
frontend/components/: Particles.tsx
