[tool.poetry]
name = "sorting-quiz-backend"
version = "1.0.0"
description = "Backend for sorting quiz game"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
Flask = "^2.3.3"
Flask-CORS = "^4.0.0"
Flask-Limiter = "^3.5.0"
Pillow = "9.5.0"
python-dotenv = "^1.0.0"
bleach = "^6.1.0"
PyJWT = "^2.8.0"
redis = "^5.0.1"
bcrypt = "^4.1.2"
marshmallow = "^3.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
